--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,8 @@ h1 {
 }
 
 .form-input {
-  width: 100%;
-  padding: 8px 0px;
+  width: 95%;
+  padding: 10px;
   border: 1px solid #ccc;
   border-radius: 4px;
 }
